--- a/ksc/index.html
+++ b/ksc/index.html
@@ -41,7 +41,7 @@
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/cobsa.jpg" alt="" />
+										<img src="images/kolo.jpg" alt="" />
 									</span>
 								</section>
 
@@ -55,7 +55,7 @@
 											<span class="icon fa-diamond"></span>
 											<div class="content">
 												<h3>Apply</h3>
-												<p align="justify">Si vous cherchez la chance d’essayer de nouvelles choses, de rencontrer des gens intéressants et d’écrire votre propre avenir. Congo Brazzaville Student Association encourage les élèves à saisir toutes les occasions - des occasions qui mènent souvent à des résultats inattendus mais enrichissants.</p>
+												<p align="justify">Si vous cherchez la chance d’essayer de nouvelles choses, de rencontrer des gens intéressants et d’écrire votre propre avenir. Congo Brazzaville Student Association encourage les élèves à saisir toutes les occasions - des occasions qui mènent souvent à des résultats inattendus.</p>
 											</div>
 										</article>
 										<article>
@@ -89,23 +89,23 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="https://drive.google.com/file/d/0B4-wD-64gaw-aHpMUS1WZkR1YW81MHExSXVUbmNNcngxU25V/view?usp=sharing" class="image"><img src="images/tw.jpg" alt="" /></a>
+											<a href="https://drive.google.com/file/d/0B4-wD-64gaw-aHpMUS1WZkR1YW81MHExSXVUbmNNcngxU25V/view?usp=sharing" class="image"><img src="images/cobsa.jpg" alt="" /></a>
 											<h3>Congo Brazzaville Student Association (CO.B.S.A) | UpSkill</h3>
-											<p align="justify">Congo Brazzaville Student Association (CO.B.S.A) existe pour identifier ces jeunes les plus brillants, leur permettre de se perfectionner à distance, leur fournir une formation en personne et leur donner des occasions d’avoir 10x impact. Nous croyons que les jeunes les plus brillants, équipés des bons outils et de la bonne occasion peuvent profiter de 10 fois l’impact de leurs pairs. Cela peut se produire en tant qu’employé, entrepreneur ou travaillant dans le secteur sans but lucratif. Cela a été démontré scientifiquement dans de nombreux domaines des affaires, des arts et des sciences. Nous permettons aux jeunes les plus prometteurs d’Afrique de lancer leur carrière avec 10x d’impact.</p>
+											<p align="justify">CO.B.S.A existe pour identifier ces jeunes les plus brillants, leur permettre de se perfectionner à distance. Nous croyons que les jeunes les plus brillants, équipés des bons outils et de la bonne occasion peuvent profiter de 10 fois l’impact sur leurs pairs. Cela a été démontré scientifiquement.</p>
 											<ul class="actions">
 												<li><a href="https://drive.google.com/file/d/0B4-wD-64gaw-aHpMUS1WZkR1YW81MHExSXVUbmNNcngxU25V/view?usp=sharing" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/team.jpg" alt="" /></a>
-											<h3>Congo Brazzaville Student Association (CO.B.S.A) | e-Entretainment</h3>
+											<a href="https://www.youtube.com/watch?v=QkdFRYgl7cs" class="image"><img src="images/team.jpg" alt="" /></a>
+											<h3>Congo Brazzaville Student Association (CO.B.S.A) | e-Services</h3>
 											<p align="justify">Fournir des produits et des services d’entretien numérisés; divertir l’utilisateur dans la variété des langues de ce monde et sa diversité culturelle; soutenir le passage d’un mode unidirectionnel à un mode bidirectionnel, d’acteurs simples à modérés, l’entreprenariat interactif et la synergie entre les plateformes analogiques et numériques.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="http://www.vox.cg/direct/" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/cobsa.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/DSC_9799.JPG" alt="" /></a>
 											<h3>Congo Brazzaville Student Association (CO.B.S.A) | e-News & Media</h3>
 											<p align="justify">L’expansion des médias traditionnels dans les nouveaux médias et l’exploitation de la technologie comme moyen d’atteindre de plus grandes masses, offrant du contenu dans la langue locale et dans tous les médias électroniques et numériques.</p>
 											<ul class="actions">
@@ -113,7 +113,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/ksc.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/DSC_9814.JPG" alt="" /></a>
 											<h3>Congo Brazzaville Student Association (CO.B.S.A) | e-Culture & Heritage</h3>
 											<p align="justify">la préservation et la mise en valeur du patrimoine culturel en ligne avec les chalets de l’avenir; la démonstration de biens culturels précieux de manière claire et informative en utilisant la technologie de pointe et les plateformes de nouveaux médias.</p>
 											<ul class="actions">
@@ -121,18 +121,17 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/DSC_9823.JPG" alt="" /></a>
+											<a href="#" class="image"><img src="images/DSC_9735.JPG" alt="" /></a>
 											<h3>Congo Brazzaville Student Association (CO.B.S.A) | e-Travel & Tourism</h3>
-											<p align="justify">Utilisation des applications et services TIC pour enrichir la société de l’information en regroupant les contenus numériques relatifs aux voyages et au tourisme, contribuant ainsi à créer une société de l’information riche en connaissances; l’offre d’information et de services liés aux voyages et au tourisme, comme les réservations de voyage en temps réel, l’emplacement et les informations de transport.</p>
+											<p align="justify">Utilisation des applications et services TIC pour enrichir la société de l’information en regroupant les contenus numériques relatifs aux voyages et au tourisme, contribuant ainsi à créer une société de l’information riche en connaissances; l’offre d’information et de services liés aux voyages et au tourisme.</p>
 											<ul class="actions">
 												<li><a href="#" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/DSC_9930.JPG" alt="" /></a>
+											<a href="https://www.youtube.com/watch?v=F6dfD9EJ6Fs" class="image"><img src="images/DSC_9823.JPG" alt="" /></a>
 											<h3>Congo Brazzaville Student Association (CO.B.S.A) | e-Business & Entreprise</h3>
-											<p align="justify">Soutenir et optimiser la création de nouveaux modèles d’affaires dans le commerce électronique et le m-commerce, d’entreprise à entreprise, d’entreprise à consommateur, de sécurité Internet et d’autres domaines; soutenir les petites et moyennes entreprises sur le marché.
-												<br>Tout ce dont vous avez besoin au même endroit: 
+											<p align="justify">Soutenir et optimiser la création de nouveaux modèles d’affaires dans le commerce électronique et le m-commerce, d’entreprise à entreprise, d’entreprise à consommateur, de sécurité Internet et d’autres domaines; soutenir les petites et moyennes entreprises sur le marché. Tout ce dont vous avez besoi: 
 												<b>TECHNOLOGIE; CULTURE; CONGO.</b>
 											</p>
 											<ul class="actions">
@@ -182,7 +181,7 @@
 												<li><a href="#">e-Learning</a></li>
 												<li><a href="#">e-Education</a></li>
 												<li><a href="#">e-Culture & Heritage</a></li>
-												<li><a href="#">e-Entretainment</a></li>
+												<li><a href="#">e-Services</a></li>
 											</ul>
 										</li>
 									</ul>
@@ -195,7 +194,7 @@
 									</header>
 									<div class="mini-posts">
 										<article>
-											<a href="http://10academy.org/" class="image"><img src="images/10.jpg" alt="" /></a>
+											<a href="http://10academy.org/" class="image"><img src="images/cobsa.jpg" alt="" /></a>
 											<p>UpSkill | e-Learning.</p>
 											<div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="paulcymboungou"><a class="LI-simple-link" href='https://in.linkedin.com/in/paulcymboungou?trk=profile-badge'>Paulcy Mboungou</a></div>
 										</article>
