--- a/ksc/generic.html
+++ b/ksc/generic.html
@@ -111,7 +111,7 @@
 												<li><a href="#">e-Learning</a></li>
 												<li><a href="#">e-Education</a></li>
 												<li><a href="#">e-Culture & Heritage</a></li>
-												<li><a href="#">e-Entretainment</a></li>
+												<li><a href="#">e-Services</a></li>
 											</ul>
 										</li>
 									</ul>
@@ -131,14 +131,14 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/kolo.jpg" alt="" /></a>
+											<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/571335183&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 											<p align="justify">Répondre aux besoins des apprenants d’acquérir des connaissances et des compétences pour un monde complexe et globalisant, créer des communautés actives d’apprentissage en ligne et cibler des modèles et des solutions pour la formation en entreprise, en éducation et en développement, soutenir les premières étapes du multimédia pour de meilleures sociétés apprenantes.</p>
 											<ul class="actions">
 												<li><a href="#" class="button">UpSkill | E-Learning</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/hpm.jpg" alt="" /></a>
+											<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/681150168&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 											<p align="justify">Élaboration d’un modèle de soins de santé axé sur le consommateur où les intervenants collaborent, en utilisant la technologie de l’information et de la communication, y compris les technologies Internet pour gérer les problèmes de santé ainsi que le système de soins de santé.</p>
 										</article>
 									</div>
