Paulcy added 11%, DATA BASE SET UP, Up On Running

--- a/ksc/index.html
+++ b/ksc/index.html
@@ -99,7 +99,7 @@
 										<article>
 											<a href="https://www.youtube.com/watch?v=QkdFRYgl7cs" class="image"><img src="images/team.jpg" alt="" /></a>
 											<h3>Congo Brazzaville Student Association (CO.B.S.A) | e-Services</h3>
-											<p align="justify">Fournir des produits et des services d’entretien numérisés; divertir l’utilisateur dans la variété des langues de ce monde et sa diversité culturelle; soutenir le passage d’un mode unidirectionnel à un mode bidirectionnel, d’acteurs simples à modérés, l’entreprenariat interactif et la synergie entre les plateformes analogiques et numériques.</p>
+											<p align="justify">Fournir des produits et des services d’entretien numérisés; divertir l’utilisateur dans la variété des langues de ce monde et sa diversité culturelle; soutenir le passage d’un mode unidirectionnel à un mode bidirectionnel, entre les plateformes analogiques et numériques.</p>
 											<ul class="actions">
 												<li><a href="http://www.vox.cg/direct/" class="button">More</a></li>
 											</ul>
@@ -131,8 +131,7 @@
 										<article>
 											<a href="https://www.youtube.com/watch?v=F6dfD9EJ6Fs" class="image"><img src="images/DSC_9823.JPG" alt="" /></a>
 											<h3>Congo Brazzaville Student Association (CO.B.S.A) | e-Business & Entreprise</h3>
-											<p align="justify">Soutenir et optimiser la création de nouveaux modèles d’affaires dans le commerce électronique et le m-commerce, d’entreprise à entreprise, d’entreprise à consommateur, de sécurité Internet et d’autres domaines; soutenir les petites et moyennes entreprises sur le marché. Tout ce dont vous avez besoi: 
-												<b>TECHNOLOGIE; CULTURE; CONGO.</b>
+											<p align="justify">Soutenir et optimiser la création de nouveaux modèles d’affaires dans le commerce électronique et le m-commerce, d’entreprise à entreprise, d’entreprise à consommateur, de sécurité Internet et d’autres domaines; soutenir les petites et moyennes entreprises sur le marché. TECHNOLOGIE; CULTURE; CONGO.
 											</p>
 											<ul class="actions">
 												<li><a href="#" class="button">More</a></li>
