--- a/index.html
+++ b/index.html
@@ -47,6 +47,16 @@
                       About Us
                     </button>
               </a>
+              <a href="http://10academy.org/">
+                    <button class="btn btn-secondary" type="button">
+                      e-Education
+                    </button>
+              </a>
+              <a href="http://ventduglobe.com/">
+                    <button class="btn btn-secondary" type="button">
+                      e-News & Media
+                    </button>
+              </a>
             </p>  
                  
                 
