--- a/ksc/index.html
+++ b/ksc/index.html
@@ -41,7 +41,7 @@
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/kolo.jpg" alt="" />
+										<img src="images/it-code.jpg" alt="" />
 									</span>
 								</section>
 
@@ -89,17 +89,18 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="https://drive.google.com/file/d/0B4-wD-64gaw-aHpMUS1WZkR1YW81MHExSXVUbmNNcngxU25V/view?usp=sharing" class="image"><img src="images/cobsa.jpg" alt="" /></a>
+											<a href="https://drive.google.com/file/d/0B4-wD-64gaw-aHpMUS1WZkR1YW81MHExSXVUbmNNcngxU25V/view?usp=sharing" class="image"><img src="images/DSC_9814.JPG" alt="" /></a>
 											<h3>Congo Brazzaville Student Association (CO.B.S.A) | UpSkill</h3>
-											<p align="justify">CO.B.S.A existe pour identifier ces jeunes les plus brillants, leur permettre de se perfectionner à distance. Nous croyons que les jeunes les plus brillants, équipés des bons outils et de la bonne occasion peuvent profiter de 10 fois l’impact sur leurs pairs. Cela a été démontré scientifiquement.</p>
+											<p align="justify">CO.B.S.A existe pour identifier ces jeunes les plus brillants, leur soutenir dans la variété des langues de ce monde et sa diversité culturelle; leur permettre de se perfectionner à distance. Nous croyons que les jeunes les plus brillants, équipés des bons outils et de la bonne occasion peuvent impacter le plus.
+											</p>
 											<ul class="actions">
 												<li><a href="https://drive.google.com/file/d/0B4-wD-64gaw-aHpMUS1WZkR1YW81MHExSXVUbmNNcngxU25V/view?usp=sharing" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="https://www.youtube.com/watch?v=QkdFRYgl7cs" class="image"><img src="images/team.jpg" alt="" /></a>
+											<a href="https://www.youtube.com/watch?v=QkdFRYgl7cs" class="image"><img src="images/it-code.jpg" alt="" /></a>
 											<h3>Congo Brazzaville Student Association (CO.B.S.A) | e-Services</h3>
-											<p align="justify">Fournir des produits et des services d’entretien numérisés; divertir l’utilisateur dans la variété des langues de ce monde et sa diversité culturelle; soutenir le passage d’un mode unidirectionnel à un mode bidirectionnel, entre les plateformes analogiques et numériques.</p>
+											<p align="justify">Fournir des produits et des services d’entretien numérisés; soutenir le passage d’un mode unidirectionnel à un mode bidirectionnel, entre les plateformes analogiques et numériques.</p>
 											<ul class="actions">
 												<li><a href="http://www.vox.cg/direct/" class="button">More</a></li>
 											</ul>
@@ -113,11 +114,11 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/DSC_9814.JPG" alt="" /></a>
+											<a href="#" class="image"><img src="images/kolo.jpg" alt="" /></a>
 											<h3>Congo Brazzaville Student Association (CO.B.S.A) | e-Culture & Heritage</h3>
 											<p align="justify">la préservation et la mise en valeur du patrimoine culturel en ligne avec les chalets de l’avenir; la démonstration de biens culturels précieux de manière claire et informative en utilisant la technologie de pointe et les plateformes de nouveaux médias.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="https://www.facebook.com/BoomboxmusicRecords/videos/1983428031910579/" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
@@ -208,7 +209,7 @@
 										</article>
 									</div>
 									<ul class="actions">
-										<li><a href="http://ventduglobe.com/" class="button">MALAMU, INC | SHOP</a></li>
+										<li><a href="http://ventduglobe.com/" class="button">e-News & Media</a></li>
 									</ul>
 								</section>
 
