--- a/ksc/index.html
+++ b/ksc/index.html
@@ -99,24 +99,24 @@
 										</article>
 										<article>
 											<a href="https://www.youtube.com/watch?v=QkdFRYgl7cs" class="image"><img src="images/it-code.jpg" alt="" /></a>
-											<h3>Congo Brazzaville Student Association (CO.B.S.A) | e-Services</h3>
-											<p align="justify">Fournir des produits et des services d’entretien numérisés; soutenir le passage d’un mode unidirectionnel à un mode bidirectionnel, entre les plateformes analogiques et numériques.</p>
+											<h3>Congo Brazzaville Student Association (CO.B.S.A) | e-News & Media</h3>
+											<p align="justify">Soutenir le passage d’un mode unidirectionnel à un mode bidirectionnel, entre les plateformes analogiques et numériques.</p>
 											<ul class="actions">
 												<li><a href="http://www.vox.cg/direct/" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/DSC_9799.JPG" alt="" /></a>
-											<h3>Congo Brazzaville Student Association (CO.B.S.A) | e-News & Media</h3>
-											<p align="justify">L’expansion des médias traditionnels dans les nouveaux médias et l’exploitation de la technologie comme moyen d’atteindre de plus grandes masses, offrant du contenu dans la langue locale et dans tous les médias électroniques et numériques.</p>
+											<a href="#" class="image"><img src="images/logo.png" alt="" /></a>
+											<h3>Congo Brazzaville Student Association (CO.B.S.A) | e-Health</h3>
+											<p align="justify">Élaboration d’un modèle de soins de santé axé sur le consommateur où les intervenants collaborent, en utilisant la technologie de l’information et de la communication, y compris les technologies Internet pour gérer les problèmes de santé ainsi que le système de soins de santé. </p>
 											<ul class="actions">
 												<li><a href="#" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/kolo.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/DSC_9823.JPG" alt="" /></a>
 											<h3>Congo Brazzaville Student Association (CO.B.S.A) | e-Culture & Heritage</h3>
-											<p align="justify">la préservation et la mise en valeur du patrimoine culturel en ligne avec les chalets de l’avenir; la démonstration de biens culturels précieux de manière claire et informative en utilisant la technologie de pointe et les plateformes de nouveaux médias.</p>
+											<p align="justify">la préservation et la mise en valeur du patrimoine culturel en ligne avec les chalets de l’avenir; la démonstration de biens culturels précieux de manière claire et informative en utilisant la technologie de pointe et les plateformes de nouveaux médias. L’expansion des médias traditionnels dans les nouveaux médias et l’exploitation de la technologie comme moyen d’atteindre de plus grandes masses, offrant du contenu dans la langue locale et dans tous les médias électroniques et numériques.</p>
 											<ul class="actions">
 												<li><a href="https://www.facebook.com/BoomboxmusicRecords/videos/1983428031910579/" class="button">More</a></li>
 											</ul>
@@ -125,14 +125,15 @@
 											<a href="#" class="image"><img src="images/DSC_9735.JPG" alt="" /></a>
 											<h3>Congo Brazzaville Student Association (CO.B.S.A) | e-Travel & Tourism</h3>
 											<p align="justify">Utilisation des applications et services TIC pour enrichir la société de l’information en regroupant les contenus numériques relatifs aux voyages et au tourisme, contribuant ainsi à créer une société de l’information riche en connaissances; l’offre d’information et de services liés aux voyages et au tourisme.</p>
+											<p>TECHNOLOGIE; CULTURE; CONGO</p>
 											<ul class="actions">
 												<li><a href="#" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="https://www.youtube.com/watch?v=F6dfD9EJ6Fs" class="image"><img src="images/DSC_9823.JPG" alt="" /></a>
+											<a href="https://www.youtube.com/watch?v=F6dfD9EJ6Fs" class="image"><img src="images/kolo.jpg" alt="" /></a>
 											<h3>Congo Brazzaville Student Association (CO.B.S.A) | e-Business & Entreprise</h3>
-											<p align="justify">Soutenir et optimiser la création de nouveaux modèles d’affaires dans le commerce électronique et le m-commerce, d’entreprise à entreprise, d’entreprise à consommateur, de sécurité Internet et d’autres domaines; soutenir les petites et moyennes entreprises sur le marché. TECHNOLOGIE; CULTURE; CONGO.
+											<p align="justify">Soutenir et optimiser la création de nouveaux modèles d’affaires dans le commerce électronique et le m-commerce, d’entreprise à entreprise, d’entreprise à consommateur, de sécurité Internet et d’autres domaines; soutenir les petites et moyennes entreprises sur le marché.
 											</p>
 											<ul class="actions">
 												<li><a href="#" class="button">More</a></li>
