Paulcy adding Menu Bar

--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
                       About Us
                     </button>
               </a>
+              
+              <a href="https://malamu.ventduglobe.com/"> 
+                    <button class="btn btn-secondary" type="button">
+                      Login
+                    </button>
+              </a>
             </p>  
               
           </div>
@@ -58,7 +64,7 @@
   <div class="social-icons">
     <ul class="list-unstyled text-center mb-0">
       <li class="list-unstyled-item">
-        <a href="#">
+        <a href="https://twitter.com/ventduglobe">
           <i class="fab fa-twitter"></i>
         </a>
       </li>
