--- a/ksc/generic.html
+++ b/ksc/generic.html
@@ -1,12 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Editorial by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Congo Brazzaville Student Association (CO.B.S.A)</title>
+		<title>CO.B.S.A - Congo Brazzaville Student Association</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -24,7 +19,7 @@
 								<header id="header">
 									<a href="index.html" class="logo"><strong>Editorial</strong> by Congo Brazzaville Student Association (CO.B.S.A)</a>
 									<ul class="icons">
-										<li><a href="#" class="icon fa-sign-in"><span class="label">Login</span></a></li>
+										<li><a href="https://malamu.ventduglobe.com/" class="icon fa-sign-in"><span class="label">Login</span></a></li>
 									</ul>
 								</header>
 
@@ -95,7 +90,7 @@
 										<li><a href="generic.html">About Us</a></li>
 										<li><a href="https://www.instagram.com/242inde/">Photo & Vidéo</a></li>
 										<li><a href="https://chat.whatsapp.com/LGxLfoy9bEu8Hl7GH7JaGy">Alumni Network</a></li>
-										<li><a href="http://www.knowledgesharingcampaign.org/">Faculty-Led and Custom Programs</a></li>
+										<li><a href="https://malamu.ventduglobe.com/">Faculty-Led and Custom Programs</a></li>
 										<li>
 											<span class="opener">Professional Development Programs</span>
 											<ul>
@@ -109,9 +104,7 @@
 											<span class="opener">Study Abroad Programs</span>
 											<ul>
 												<li><a href="#">e-Learning</a></li>
-												<li><a href="#">e-Education</a></li>
 												<li><a href="#">e-Culture & Heritage</a></li>
-												<li><a href="#">e-Services</a></li>
 											</ul>
 										</li>
 									</ul>
@@ -131,7 +124,7 @@
 											</ul>
 										</article>
 										<article>
-											<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/571335183&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+											<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/571335183&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
 											<p align="justify">Répondre aux besoins des apprenants d’acquérir des connaissances et des compétences pour un monde complexe et globalisant, créer des communautés actives d’apprentissage en ligne et cibler des modèles et des solutions pour la formation en entreprise, en éducation et en développement, soutenir les premières étapes du multimédia pour de meilleures sociétés apprenantes.</p>
 											<ul class="actions">
 												<li><a href="#" class="button">UpSkill | E-Learning</a></li>
