Add MTN TV link

--- a/ksc/index.html
+++ b/ksc/index.html
@@ -93,13 +93,13 @@
 											</ul>
 										</article>
 										<article>
-											<a href="http://www.vox.cg/direct/" class="image"><img src="images/vox.png" alt="" /></a>
+											<a href="http://telenangai.com/tvs/50" class="image"><img src="images/tng.jpg" alt="" /></a>
 										
 											<h3>Congo Brazzaville Student Association (CO.B.S.A) | e-News & Media</h3>
 											<p align="justify">Soutenir le passage d’un mode unidirectionnel à un mode bidirectionnel, entre les plateformes analogiques et numériques.</p>
 										
 											<ul class="actions">
-												<li><a href="http://www.vox.cg/direct/" class="button">More</a></li>
+												<li><a href="http://telenangai.com" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
@@ -122,13 +122,12 @@
 											<a href="#" class="image"><img src="images/P1010936.JPG" alt="" /></a>
 											<h3>Congo Brazzaville Student Association (CO.B.S.A) | e-Travel & Tourism</h3>
 											<p align="justify">Utilisation des applications et services TIC pour enrichir la société de l’information en regroupant les contenus numériques relatifs aux voyages et au tourisme, contribuant ainsi à créer une société de l’information riche en connaissances; l’offre d’information et de services liés aux voyages et au tourisme.</p>
-											<p>TECHNOLOGIE; CULTURE; CONGO</p>
 											<ul class="actions">
 												<li><a href="#" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="https://www.youtube.com/watch?v=F6dfD9EJ6Fs" class="image"><img src="images/ksc.jpg" alt="" /></a>
+											<a href="https://www.youtube.com/watch?v=F6dfD9EJ6Fs" class="image"><img src="images/DSC_9823.JPG" alt="" /></a>
 											<h3>Congo Brazzaville Student Association (CO.B.S.A) | e-Business & Entreprise</h3>
 											<p align="justify">Soutenir et optimiser la création de nouveaux modèles d’affaires dans le commerce électronique et le m-commerce, d’entreprise à entreprise, d’entreprise à consommateur, de sécurité Internet et d’autres domaines; soutenir les petites et moyennes entreprises sur le marché.
 											</p>
@@ -190,14 +189,14 @@
 									</header>
 									<div class="mini-posts">
 										<article>
-											<a href="http://10academy.org/" class="image"><img src="images/10.jpg" alt="" /></a>
+											<a href="http://10academy.org/" class="image"><img src="images/logo.png" alt="" /></a>
 											<p>UpSkill | e-Learning.</p>
 										</article>
 										<ul class="actions">
 												<li><a href="http://10academy.org/" class="button">More</a></li>
 										</ul>
 										<article>
-											<a href="https://made-in-congo.com/" class="image"><img src="images/LogoMadeInCongo.png" alt="" /></a>
+											<a href="https://made-in-congo.com/" class="image"><img src="images/logo.png" alt="" /></a>
 											<p>MADE IN CONGO</p>
 										</article>
 										<ul class="actions">
