--- a/ksc/index.html
+++ b/ksc/index.html
@@ -150,6 +150,10 @@
 									<form method="post" action="#">
 										<input type="text" name="query" id="query" placeholder="Search" />
 									</form>
+									<div>
+									<script async src="https://cse.google.com/cse.js?cx=008044514023668847676:nt8yzsqr8oo"></script>
+									<div class="gcse-search"></div>
+									</div>
 								</section>
 
 							<!-- Menu -->
