Paulcy added Pic 03

--- a/ksc/blog.html
+++ b/ksc/blog.html
@@ -256,7 +256,7 @@
     </div>
 </section>
 <!-- End of Blog Section -->	<!-- Features Section-->
-<section id="cta" class="bg-fixed overlay" style="background-image: url(img/bg.jpg);">
+<section id="cta" class="bg-fixed overlay" style="background-image: url(img/03.jpg);">
     <div class="container">
         <div class="section-content" data-aos="fade-up">
             <div class="row">
