--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               CO.B.S.A. represent a student global views regarding the aspects such as promote, coordinate, and operate student’s activities, services and enhance channels of communication between the students and faculties, administration, alumni, universities, Republic Of Congo High Commission (Embassy) and other associations. 
               <br>
               <strong>CO.B.S.A</strong> was started on <strong>20th April 2014.</strong><br>
-              <a href="ksc/index.html">
+              <a href="KSC/index.html">
                     <button class="btn btn-secondary" type="button">
                       About Us
                     </button>
@@ -64,7 +64,7 @@
   <div class="social-icons">
     <ul class="list-unstyled text-center mb-0">
       <li class="list-unstyled-item">
-        <a href="https://twitter.com/ventduglobe">
+        <a href="https://twitter.com/BringShareLearn">
           <i class="fab fa-twitter"></i>
         </a>
       </li>
